Fresh/Home.css
@keyframes fadeIn {
	0% {
	  opacity:0;
	}
	100% {
	  opacity:1;
	}
  }
  
  @-moz-keyframes fadeIn {
	0% {
	  opacity:0;
	}
	100% {
	  opacity:1;
	}
  }
  
  @-webkit-keyframes fadeIn {
	0% {
	  opacity:0;
	}
	100% {
	  opacity:1;
	}
  }
  
  @-o-keyframes fadeIn {
	0% {
	  opacity:0;
	}
	100% {
	  opacity:1;
	}
  }
  
  @-ms-keyframes fadeIn {
	0% {
	  opacity:0;
	}
	100% {
	  opacity:1;
  }
  }
#Misty {
	position: absolute;
	top: 0;
	left: 0px;
	width: 100%;
	height: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url("../panjinda-iIqiI5fyZKs-unsplash.jpg")
}
#radarmain {
	position: absolute;
	display: block;
	top: 50%;
	left: 50%;
	transform: translateX(-50%) translateY(-50%);
	width: 40vw;
	height: 60vh;
	border: black;
	background-color: rgb(255, 255, 255);
	padding: 10px;

}
#containertopleft {
	position: relative;
	height: 250px;
	width: 150px;
	margin-top: 30px; 
	margin-left: 30px;
	border: rgba(245,108,110,0.001);
	border-style: solid;
	font-family: 'Barlow', sans-serif;
	color: white;
}
#icon {
	position: absolute;
	top: 40px;
	left: 0px;
	width: 100px;
	height: 100px;
}
#desc {
	position: absolute;
	top: 120px;
	left: 10px;
	font-size: 30px;
}
#tempnow {
	position: absolute;
	top: 220px;
	left: 10px;
	font-size: 50px;
	font-weight: 700;
		
}
#location {
	position: absolute;
	top: 166px;
	left: 10px;
	width: 150px;
	height: 70px;
	border: none;
	border-radius: none;
	background-color: rgb(255, 255, 255, 0.0001);
	color: white;
	font-family: 'Barlow', sans-serif;
	font-weight: 200;
	font-size: 20px;
}
#close {
	width: 15px;
	height: 15px;
	cursor: pointer;
}
#settingspreview p {
	text-align: center;
}
#Preferences {
	transition: ease-in 0.13s;
}
#Preferences:hover {
	color: rgb(199, 231, 247);
	cursor: pointer;


}



/*SWITCHES*/


/*DARK THEME*/

.switch {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 34px;
	left: 50%;
	margin-left: -30px;
  }  
  .switch input { 
		display: none;
  }  
  .slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #ccc;
	-webkit-transition: .4s;
	transition: .4s;
  }
  .slider:before {
	position: absolute;
	content: "";
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
	background-color: white;
	-webkit-transition: .4s;
	transition: .4s;
  }
  input:checked + .slider {
	background-color: #2196F3;
  }  
  input:focus + .slider {
	box-shadow: 0 0 1px #2196F3;
  }  
  input:checked + .slider:before {
	-webkit-transform: translateX(26px);
	-ms-transform: translateX(26px);
	transform: translateX(26px);
  }
  .slider:after{
   content:'';
   color: rgb(150, 150, 150);
   display: block;
   position: absolute;
   transform: translate(-50%,-50%);
   top: 50%;
   left: 73%;
   font-size: 10px;
   z-index: 100;
   font-family: 'Barlow', sans-serif;
  }
  input:checked + .slider:after{  
  content:'ON';
  }



  /*UNITS*/

#switch22 p {
	position: absolute;
	margin: 0;
	top: 50%;
	margin-top: -6px;
	left: 18%;
	font-family: 'Barlow', sans-serif;
	font-size: 10px;
	color: #2196F3;
}
  .slider1 {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #ccc;
	-webkit-transition: .4s;
	transition: .4s;
  }  
  .slider1:before {
	position: absolute;
	content: "";
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
	background-color: white;
	-webkit-transition: .4s;
	transition: .4s;
  }
  input:checked + .slider1{
	background-color: #cfcfcf;
  }  
  input:focus + .slider1 {
	box-shadow: 0 0 1px #2196F3;
  }  
  input:checked + .slider1:before {
	-webkit-transform: translateX(26px);
	-ms-transform: translateX(26px);
	transform: translateX(26px);
  }
.slider1:after{
 content:'';
 color: #2196F3;
 display: block;
 position: absolute;
 transform: translate(-50%,-50%);
 top: 50%;
 left: 73%;
 font-size: 10px;
 z-index: 100;
 font-family: 'Barlow', sans-serif;
}
input:checked + .slider1:after
{  
  content:'SI';
}
  /* Rounded sliders */
  .slider.round {
	border-radius: 34px;
  }
  
  .slider.round:before {
	border-radius: 50%;
  }
  .slider1.round {
	border-radius: 34px;
  }
  
  .slider1.round:before {
	border-radius: 50%;
  }


  /* END OF SWITCHES */


#innertest1 {
	display: none;
}  
#Customize {
	transition: ease-in 0.13s;
}
#Customize:hover {
	color: rgb(199, 231, 247);
	cursor: pointer;
}
#Feedback {
	transition: ease-in 0.13s;
}
#Feedback:hover {
	color: rgb(199, 231, 247);
	cursor: pointer;
}
#coordinatesform {
	position: absolute;
	background-color: white;
	left: 50%;
	border-radius: 4px;
	transform: translateX(-50%) translateY(-50%);
	display: none;
	font-family: 'Barlow', sans-serif;
	padding: 25px;
}
#containertopright {
	position: absolute;
	height: 475px;
	width: 25vw;
	top: 0px;
	right: 0px;
 	margin-top: 100px;
	margin-right: 0px;
	border: rgba(128, 28, 30, 0.001);
	border-style: solid;
	font-family: 'Barlow', sans-serif;
	color: white;
}

#Widget1 {
	position: relative;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100px;
	background-color: none;
}
#h1 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 20px;
	font-family: 'Barlow', sans-serif;
	font-weight: 300;
}
#stat1 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 30px;
	font-weight: 700;
}
#Widget2 {
	position: relative;
	top: 4vh;
	left: 0px;
	width: 100%;
	height: 100px;
	background-color: none;
}
#h2 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 20px;
	font-family: 'Barlow', sans-serif;
	font-weight: 300;
}
#stat2 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 30px;
	font-weight: 700;
}
#Widget3 {
	position: relative;
	top: 8vh;
	left: 0px;
	width: 100%;
	height: 100px;
	background-color: none;
}
#h3 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 20px;
	font-family: 'Barlow', sans-serif;
	font-weight: 300;
}
#stat3 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 30px;
	font-weight: 700;
}
#Widget4 {
	position: relative;
	top: 12vh;
	left: 0px;
	width: 100%;
	height: 100px;
	background-color: none;
}
#h4 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 20px;
	font-family: 'Barlow', sans-serif;
	font-weight: 300;
}
#stat4 {
	position: absolute;
	top: 20px;
	left: 3.9vw;
	font-size: 30px;
	font-weight: 700;
}
#containertop {
	position: absolute;
	border-style: solid;
	border-color: rgba(0, 0, 0, 0.001);
	top: 0px;
	left: 50%;
	margin-left: -275px;
	width: 550px;
	height: 100px;
}
#containertopHOLDER {
	position: relative;
	border-style: solid;
	border-color: rgba(253, 58, 58, 0.001);
	top: 0px;
	left: 0px;
	margin-left: 0px;
	width: 550px;
	height: 100px;
}
#iconlocation {
	position: absolute;
	top: 37px;
	right: 145px;
	width: 27px;
	height: 27px;
}
#iconlocation:hover {
	cursor: pointer		
}
#hamburger {
	position: absolute;
	top: 37px;
	left: 130px;
	width: 30px;
	height: 30px;
}
#hamburger:hover {
	cursor: pointer;
}
#settingspreview {
	position: absolute;
	display: none;
	top: 30px;
	left: 130px;
	height: 150px;
	width: 120px;
	background-color: rgb(248, 248, 248);
	border-radius: 3px;
	padding: 10px;
	font-family: 'Barlow', sans-serif;
	animation: fadeIn ease 0.6s;
	-webkit-animation: fadeIn ease 0.6s;
	-moz-animation: fadeIn ease 0.6s;
	-o-animation: fadeIn ease 0.6s;
	-ms-animation: fadeIn ease 0.6s;
	z-index: 10;
}
#clock {
    position: absolute;
    top: 50px;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    color: #ffffff;
    font-size: 30px;
    font-family: 'Barlow', sans-serif;
	letter-spacing: 7px;
}

